# sp1-cook

./: .gitignore  Cargo.toml  README.md  typescript
base_sp1_p3/: Cargo.toml
base_sp1_p3/src/utils/: mod.rs  sp1_p3_poseidon2.rs
bytes_op/: Cargo.toml
bytes_op/src/: main.rs
contracts/: README.md  remappings.txt
contracts/src/: anyverifier.sol  ecrecover.sol
contracts/test/: chunkedeip712.t.sol  ecrecover.t.sol  eip712.t.sol
p2agg/: Cargo.toml
p2agg/src/: main.rs
p3agg/: Cargo.toml
p3agg/src/: lib.rs  main.rs  p3_uni_stark_verify.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: lib.rs  main.rs
program/src/cooks/: ecdsa_recover.rs  fibonacci.rs  keccak256.rs  mod.rs  poseidon_hash.rs  verify_ecdsa.rs  verify_p2_proof.rs
recursive/: Cargo.toml
recursive/src/: main.rs
script/: Cargo.toml
script/src/utils/: fixtures.rs  mod.rs  p2_proof.rs  unit_tests.rs
sp1-eip712-type/: Cargo.toml
sp1-eip712-type/src/types/: mod.rs  sp1_tx_types.rs
sp1eip712/: Cargo.toml
sp1eip712/src/: lib.rs  main.rs
sp1eip712/src/eip/: sp1_eip712_spend.rs  sp1_tx_eip_712.rs  traits.rs
