[package]
name = "base_sp1_p3"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-baby-bear = { version = "0.1.3-succinct", features = ["nightly-features"] }
p3-poseidon2 = { version = "0.1.3-succinct" }
p3-matrix = { version = "0.1.3-succinct" }
p3-symmetric = { version = "0.1.3-succinct" }
p3-challenger = { version = "0.1.3-succinct" }
p3-uni-stark = { version = "0.1.3-succinct" }
p3-field ={ version = "0.1.3-succinct"}

sp1-core = { path = "../../../infra/sp1/core"}
sp1-recursion-core ={ path = "../../../infra/sp1/recursion/core"}

itertools ={ version = "0.13.0"}
anyhow ={ version = "1.0.86"}

[dev-dependencies]
rand = "0.8.5"
zkhash = { git = "https://github.com/HorizenLabs/poseidon2" }