[package]
name = "p3agg"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", features = [
  "nightly-features",
], rev = "3b5265f9d5af36534a46caebf0617595cfb42c5a" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git", rev = "3b5265f9d5af36534a46caebf0617595cfb42c5a" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", rev = "3b5265f9d5af36534a46caebf0617595cfb42c5a" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "3b5265f9d5af36534a46caebf0617595cfb42c5a" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "3b5265f9d5af36534a46caebf0617595cfb42c5a" }

sp1-zkvm = { path = "../../../infra/sp1/zkvm/entrypoint" }
sp1-core = { path = "../../../infra/sp1/core"}
sp1-recursion-core ={ path = "../../../infra/sp1/recursion/core"}

tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
  "keccak",
] }

bincode = "1.3.3"