[package]
name = "p3agg"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-baby-bear = { version = "0.1.3-succinct", features = ["nightly-features"] }
p3-poseidon2 = { version = "0.1.3-succinct" }
p3-matrix = { version = "0.1.3-succinct" }
p3-challenger = { version = "0.1.3-succinct" }
p3-uni-stark = { version = "0.1.3-succinct" }

sp1-zkvm = { path = "../../../infra/sp1/zkvm/entrypoint" }
sp1-core = { path = "../../../infra/sp1/core"}
sp1-recursion-core ={ path = "../../../infra/sp1/recursion/core"}
