[package]
name = "recursive"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.2"
# sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.7-testnet" }
sp1-zkvm = { path = "../../../infra/sp1/zkvm/entrypoint" }
sp1-precompiles = { path = "../../../infra/sp1/zkvm/precompiles" }